--- a/notebooks/customer_data_eda.ipynb
+++ b/notebooks/customer_data_eda.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e81291cb",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "79821372",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
        "'C:\\\\Users\\\\Admin\\\\Desktop\\\\BankingMLProject\\\\data\\\\customer_data.csv'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "53515b64",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "82115efe",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
        "4       200004   NaN      Business  Kolhapur   East  HDFC Bank       1227"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "9bbb2405",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "c7fcc838",
    "metadata": {},
    "outputs": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "629d37af",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
        "max    209999.00000    79.000000   1999.000000"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "e026dbfa",
    "metadata": {},
    "outputs": [
@@ -379,7 +379,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "302f8801",
    "metadata": {},
    "outputs": [
@@ -415,7 +415,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "428a4871",
    "metadata": {},
    "outputs": [
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "307213f7",
    "metadata": {},
    "outputs": [
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "0315026d",
    "metadata": {},
    "outputs": [
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "c9d2403d",
    "metadata": {},
    "outputs": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "8b4446e3",
    "metadata": {},
    "outputs": [
@@ -532,7 +532,7 @@
        "<Axes: xlabel='Age'>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "debb30dc",
    "metadata": {},
    "outputs": [],
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "3d466609",
    "metadata": {},
    "outputs": [
@@ -573,7 +573,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_9412\\4268044983.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_10856\\4268044983.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "a03530a2",
    "metadata": {},
    "outputs": [
@@ -609,18 +609,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "f12a88a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Customer_ID   Age  Branch_ID  Customer_Type_Employee  \\\n",
+      "0       200000  56.0       1350                    True   \n",
+      "1       200001  69.0       1648                   False   \n",
+      "2       200002  46.0       1798                   False   \n",
+      "3       200003  32.0       1900                   False   \n",
+      "4       200004   NaN       1227                   False   \n",
+      "\n",
+      "   Customer_Type_Individual  City_Mumbai  City_Nagpur  City_Nashik  City_Pune  \\\n",
+      "0                     False        False        False        False       True   \n",
+      "1                     False        False        False        False      False   \n",
+      "2                     False        False        False        False       True   \n",
+      "3                      True        False        False        False       True   \n",
+      "4                     False        False        False        False      False   \n",
+      "\n",
+      "   City_Solapur  Region_North  Region_South  Region_West  \n",
+      "0         False          True         False        False  \n",
+      "1         False         False         False        False  \n",
+      "2         False         False         False         True  \n",
+      "3         False         False         False         True  \n",
+      "4         False         False         False        False  \n"
+     ]
+    }
+   ],
    "source": [
     "# Encodage des variables catégorielles\n",
-    "df_encoded = pd.get_dummies(df, drop_first=True)"
+    "df_encoded = pd.get_dummies(df, drop_first=True)\n",
+    "print (df_encoded.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "8b16033a",
    "metadata": {},
    "outputs": [
